add test case for biceps C.5